--- a/app/views/records/print_view.html.slim
+++ b/app/views/records/print_view.html.slim
@@ -74,3 +74,8 @@ span.pull-right
     = current_user.name
     |  em 
     = traduz_data_e_hora(Time.now)
+
+javascript:
+  $(document).ready(function() {
+    window.print();
+  });
